--- a/config/vhost/001_site.conf
+++ b/config/vhost/001_site.conf
@@ -1,13 +1,13 @@
 Listen 41000
 
 <VirtualHost *:41000>
-	DocumentRoot "/var/www/symfony2/myRemLami/web"
+	DocumentRoot "/var/www/symfony2/{site}/web"
 	DirectoryIndex app.php
-	<Directory "/var/www/symfony2/myRemLami/web">
+	<Directory "/var/www/symfony2/{site}/web">
 		AllowOverride All
 		Require all granted
 	</Directory>
 
-	ErrorLog /var/log/apache2/myRemLami.error
-	CustomLog /var/log/apache2/myRemLami.log combined
+	ErrorLog /var/log/apache2/{site}.error
+	CustomLog /var/log/apache2/{site}.log combined
 </VirtualHost>
