change build web image

--- a/config/vhost/001_site.conf
+++ b/config/vhost/001_site.conf
@@ -1,13 +1,13 @@
 Listen 41000
 
 <VirtualHost *:41000>
-	DocumentRoot "/var/www/symfony2/{site}/web"
+	DocumentRoot "/var/www/html/manperf_sf2/web"
 	DirectoryIndex app.php
-	<Directory "/var/www/symfony2/{site}/web">
+	<Directory "/var/www/html/manperf_sf2/web">
 		AllowOverride All
 		Require all granted
 	</Directory>
 
-	ErrorLog /var/log/apache2/{site}.error
-	CustomLog /var/log/apache2/{site}.log combined
+	ErrorLog /var/log/apache2/manperf_sf2.error
+	CustomLog /var/log/apache2/manperf_sf2.log combined
 </VirtualHost>
