--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '2'
 services:
     web:
-        image: abhayagiri/php-5.6-apache
+        build: web
         ports:
             - "80:80"
             - "41000:41000"
         volumes:
-            - /home/projets/Symfony/docker_sf2_env/config/php.ini:/usr/local/etc/php/php.ini
-            - /home/projets/Symfony/docker_sf2_env/config/vhost/001_site.conf:/etc/apache2/sites-enabled/001_site.conf
-            - /home/projets/Symfony2/:/var/www/symfony2/
+            - /developpement/docker/docker_sf2_env/config/php.ini:/usr/local/etc/php/php.ini
+            - /developpement/docker/docker_sf2_env/config/vhost/:/etc/apache2/sites-enabled/
+            - /developpement/sfProjects/sf2/:/var/www/html/
         links:
             - db
         environment:
@@ -20,4 +20,4 @@ services:
         environment:
             MYSQL_ROOT_PASSWORD: root
         volumes:
-            - /home/projets/docker/sf2/mysql:/var/lib/mysql
+            - /developpement/docker/mysql:/var/lib/mysql
